--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>379</width>
-    <height>384</height>
+    <width>639</width>
+    <height>483</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,18 +16,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <widget class="QMdiArea" name="mdiArea">
-      <widget class="QWidget" name="subwindow">
-       <property name="windowTitle">
-        <string>Subwindow</string>
-       </property>
-      </widget>
-      <widget class="QWidget" name="subwindow_2">
-       <property name="windowTitle">
-        <string>Subwindow</string>
-       </property>
-      </widget>
-     </widget>
+     <widget class="QMdiArea" name="mdiArea"/>
     </item>
    </layout>
   </widget>
@@ -36,8 +25,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>379</width>
-     <height>21</height>
+     <width>639</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
